--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -16,8 +16,9 @@ jobs:
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
-        args: >
-          -Dsonar.projectKey=mean-tvl-internal
+        with:
+          args: >
+            -Dsonar.projectKey=mean-tvl-internal
       # If you wish to fail your job when the Quality Gate is red, uncomment the
       # following lines. This would typically be used to fail a deployment.
       # - uses: sonarsource/sonarqube-quality-gate-action@master
