remove sonar props file

--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -19,4 +19,7 @@ jobs:
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
         with:
           args: >
-            -Dsonar.verbose=true
+            -Dsonar.verbose=false
+            -Dsonar.projectKey=mean-stats
+            -Dsonar.sources=src/
+
