repo name from env

--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -20,6 +20,6 @@ jobs:
         with:
           args: >
             -Dsonar.verbose=false
-            -Dsonar.projectKey=meanfi-stats
+            -Dsonar.projectKey=${{ github.event.repository.name }}
             -Dsonar.sources=src/
 
