--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   ],
   "scripts": {
     "build": "yarn clean && tsc",
+    "start": "node index.js",
     "clean": "rimraf ./lib"
   },
   "dependencies": {
